# arc_ws

./: .gitignore  .gitmodules  3d_map.ply  cyclonedds.xml
src/: build_decoder.py  build_int8_encoder.py  dataset.py  evaluate_mask_vae.ipynb  exporting.ipynb  finetune_mask_vae.py  poc.ipynb  trace.json  verify_exports.ipynb
src/arc/: package.xml  setup.cfg  setup.py
src/arc_interfaces/: CMakeLists.txt  package.xml
src/arc_interfaces/msg/: DecodedImage.msg  Mask.msg
src/client/: package.xml  setup.py
src/client/client/: codeword_publisher.py  codeword_subscriber.py  enc.cache  exporting.ipynb  go2_camera_publisher.py  mask_publisher.py
src/client_cpp/: CMakeLists.txt  package.xml
src/client_cpp/src/: codeword_publisher.cpp  codeword_publisher.cpp.bak
src/server/: package.xml  setup.py
src/server/server/: critic.py  inpainter.py  interpreter.py  vision_expert.py
src/server_cpp/: CMakeLists.txt  package.xml
src/server_cpp/src/: codeword_subscriber.cpp
src/unitree_go2/: package.xml  setup.cfg  setup.py
src/unitree_go2/calibration/: front_camera_720.yaml
src/unitree_go2/launch/: robot.launch.py  slam_n_nav.launch.py
src/unitree_go2/unitree_go2/: front_camera_publisher.py  lidar_publisher.py  lowstate_joint_publisher.py  unitree_go2_base.py
src/unitree_go2/urdf/: go2_description.urdf
